--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   # UI & Fonts
   google_fonts: ^6.2.1
 
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
